feat: enhance travel blog layout with header and card components; add CSS styles for improved presentation

--- a/ex-1/index.html
+++ b/ex-1/index.html
@@ -12,8 +12,20 @@
   <title>CSS Direction and Box Model - Ex 1</title>
 </head>
 
-<body>
-  <!-- Start coding here -->
-</body>
+<header>
+  <h1>Travel Blog</h1>
+</header>
+
+<div class="card">
+  <h2>คาเฟ่เชียงใหม่น่าเที่ยว 10 อันดับ 2040</h2>
+  <div class="box"></div>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam luctus scelerisque placerat. Vivamus hendrerit neque non facilisis auctor. Suspendisse sit amet felis euismod velit ullamcorper malesuada.</p>
+</div>
+
+<div class="card">
+  <h2>สถานที่น่าเที่ยว 10 อันดับ 2140</h2>
+  <div class="box"></div>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam luctus scelerisque placerat. Vivamus hendrerit neque non facilisis auctor. Suspendisse sit amet felis euismod velit ullamcorper malesuada.</p>
+</div>
 
 </html>
