--- a/ex-2/index.html
+++ b/ex-2/index.html
@@ -10,7 +10,10 @@
 </head>
 
 <body>
-  <!-- Start coding here -->
+  <div class="container">
+    <div class="box">
+      <h1 class="title">TechUp</h1>
+    </div>
+  </div>
 </body>
-
 </html>
